style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

:root {
    --icon-size: 3rem;
    --page-width: 800px;
    --bor-rad: 0.4rem;
    --color-1: #222831;
    --color-2: #31363F;
    --color-3: #76ABAE;
    --color-4: #EEEEEE;
}

button,
input,
select {
    color: inherit;
    background-color: inherit;
    border: initial;
    cursor: pointer;
}

input,
select {
    outline: none;
}

select {
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    text-overflow: '';
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    color: white;
    border-radius: var(--bor-rad);
}

::-webkit-scrollbar {
    width: 2px;
}

::-webkit-scrollbar-track {
    background: var(--color-1);
}

::-webkit-scrollbar-thumb {
    background: var(--color-2);
}

::-webkit-scrollbar-thumb:hover {
    background: var(--color-4);
}

input[type="checkbox"] {
    appearance: none;
    -webkit-appearance: none;
    display: flex;
    align-content: center;
    justify-content: center;
    font-size: 2rem;
    padding: 0.1rem;
    border-radius: 0.5rem;
}

input[type="checkbox"]::before {
    content: "";
    width: var(--icon-size);
    height: 2.2rem;
    /* clip-path: polygon(14% 51%, 26% 37%, 46% 55%, 73% 24%, 85% 37%, 46% 74%); */
    clip-path: polygon(14% 49%, 22% 35%, 39% 50%, 71% 18%, 81% 29%, 40% 68%);
    transform: scale(0);
    background-color: var(--color-4);
}

input[type="checkbox"]:checked::before {
    transform: scale(1);
}

body {
    background: var(--color-3);
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

.icon {
    min-width: var(--icon-size);
    max-width: var(--icon-size);
    min-height: var(--icon-size);
    max-height: var(--icon-size);
    filter: invert();
}

#header {
    align-items: center;
    background: var(--color-1);
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

#header h1 {
    font-weight: 700;
}

#header,
main,
#footer {
    display: flex;
    width: var(--page-width);
    padding: 1rem;
    gap: 1rem;
}

main {
    flex-direction: column;
}

.passOption {
    display: flex;
    align-items: center;
    flex-direction: row-reverse;
    background: color-mix(in srgb, var(--color-2) 30%, transparent);
    margin-bottom: 0.2rem;
    padding: 0.4rem;
}

.passOption #password,
.passOption label {
    width: 100%;
    height: var(--icon-size);
    display: flex;
    align-items: center;
    text-indent: 1rem;
}

.passOption label {
    font-size: 1.05rem;
    cursor: pointer;
    user-select: none;
    text-transform: capitalize;
}

.passOption input,
.passOption select {
    min-width: var(--icon-size);
    max-width: var(--icon-size);
    height: var(--icon-size);
    padding: 0.6rem;
    background: var(--color-2);
}

#passLength {
    text-align: center;
    height: 3rem;
    padding: 0.2rem;
    font-size: 1.6rem;
    background: var(--color-2);
}

#password {
    font-size: 1.4rem;
    font-weight: 500;
    letter-spacing: 1px;
}

#generate {
    text-align: center;
    width: 100%;
    height: var(--icon-size);
    margin-top: 0.3rem;
    font-size: 1.2rem;
    font-weight: 500;
    background-color: var(--color-4);
    color: #00224D;
    transition: all 0.2s ease;
}

#generate:hover,
#copy:active {
    background-color: var(--color-2);
    color: var(--color-4)
}

#copy {
    height: var(--icon-size);
    background: var(--color-2);
    transition: all .2s ease;
}

#copy:disabled {
    cursor: not-allowed;
    background-color: var(--color-2);
}

#copy:hover,
#copy:active {
    background-color: var(--color-4);
}

#copy:hover .icon {
    filter: none;
}

#copy .icon {
    padding: 0.6rem;
    pointer-events: none;
}

#footer {
    background: var(--color-1);
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
}

#footer p {
    text-align: center;
    width: 100%;
}

@media only screen and (max-width: 800px) {
    :root {
        --page-width: 100%;
    }
}

@media only screen and (max-width: 400px) {
    #header h1 {
        font-size: 1.2rem;
    }

    #password {
        overflow: auto;
        text-wrap: nowrap;
        /* font-size: 1rem; */
    }
}

